--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Rock Paper Scissors!</title>
 </head>
 <body>
-    <script src=index.js>
-    </script>
+    <script src=index.js></script>
 </body>
 </html>
