Add basic body and UI elements

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <button id="beginGame">Begin Game</button>
         <div class="mainMenu">
             <p id="prompt"></p>
+            <p id="scoreboard"></p>
                 <div class="choices">
-                    <button id="rockButton" onclick="rock">Rock</button>
+                    <button id="rockButton">Rock</button>
                     <button id="scissorsButton">Scissors</button>
                     <button id="paperButton">Paper</button>
                 </div>
             <p id="round"></p>
-            <p id="scoreboard"></p>
+            
         </div>
     </div>
 </body>
